ci: change to public agents

--- a/.github/workflows/release_binary.yml
+++ b/.github/workflows/release_binary.yml
@@ -12,7 +12,7 @@ permissions: write-all
 
 jobs:
   release:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     environment: release
     steps:
       - uses: actions/checkout@v4
@@ -39,4 +39,3 @@ jobs:
 
       - name: Release publish
         run: make release
-
